# Alzhecare-ServerSide

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.ps1
app/: dependencies.py  main.py
app/core/: config.py  security.py
app/db/: mongo.py  schema_normalized.sql  sql.py
app/models/v1/: alzheimer_ensemble_v1.pth  le_classes.pkl
app/repositories/: appointment_repository.py  diagnostico_repository.py  doctor_patient_repository.py  doctor_request_repository.py  notification_repository.py  user_repository.py
app/routers/: admin_appointments.py  admin_citas.py  admin_users.py  auth.py  diagnosis.py  diagnostico.py  doctor.py  patient.py
app/schemas/: auth.py  coordinacion.py  coordination.py  diagnostico.py
app/services/: auth_service.py  coordinacion_service.py  coordination_service.py  diagnosis_service.py  diagnostico_service.py  roboflow_service.py  s3_service.py  torch_service.py
docs/: API_Routes.md  AlzhecareDB_diagrama.md  sql_migration_mapping.md
